feat(compilations): Добавлены подборки - Добавлен метод получения подборок - Добавлены картинки подборок - Добавлен парсер coursera
