# src/models/index.ts
@@ -3,5 +3,7 @@ import SessionModel from "./session";
 import UserModel from "./user";
 import CategoryModel from "./category";
 import ReviewModel from "./review";
+import CompilationModel from "./compilation";
+import FilterModel from "./filter"
 
-export { UserModel, SessionModel, CourseModel, CategoryModel, ReviewModel };
+export { UserModel, SessionModel, CourseModel, CategoryModel, ReviewModel, CompilationModel, FilterModel };
